098_bst_map/grade.txt
Grading at 11/14/2022:05:45:03.042150
For commit ID c897f8d3cec5b69ae3938482bc71bdc82ed64ba2
Grading at Mon Nov 14 12:45:01 AM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = int; V = int]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = int]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<int, int>::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<int, std::__cxx11::basic_string<char> >::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = int; V = Tester]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = Tester]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<int, Tester>::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = int]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<std::__cxx11::basic_string<char>, int>::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = Tester]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<std::__cxx11::basic_string<char>, Tester>::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = Tester; V = int]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = int]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<Tester, int>::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = std::__cxx11::basic_string<char>]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<Tester, std::__cxx11::basic_string<char> >::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::copy2(BstMap<K, V>::Node*) [with K = Tester; V = Tester]’:
bstmap.h:138:21:   required from ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = Tester]’
89-tester.cpp:131:10:   required from here
bstmap.h:62:12: error: ‘class BstMap<Tester, Tester>::Node’ has no member named ‘add’
   62 |       ans->add(current->data.first, current->data.second);
      |       ~~~~~^~~
bstmap.h:63:22: error: void value not ignored as it ought to be
   63 |       Node * l = copy(current->left);
      |                  ~~~~^~~~~~~~~~~~~~~
bstmap.h:64:22: error: void value not ignored as it ought to be
   64 |       Node * r = copy(current->right);
      |                  ~~~~^~~~~~~~~~~~~~~~
The code did not compile.  This test failed.

Overall Grade: F
